# 234123-Operating-Systems

./: .gitignore  README.md
hw1/: BuiltIn.cpp  BuiltIn.h  CMakeLists.txt  Command.h  Commands.cpp  Commands.h  External.cpp  External.h  JobsList.cpp  JobsList.h  Makefile  Pipe.h  Redirection.h  Shell.cpp  Shell.h  Utility.cpp  Utility.h  signals.cpp  smash.cpp  submitters.txt
hw2/: move.sh  test_hello  test_hello.cpp
hw2/OS/arch/x86/entry/syscalls/: syscall_64.tbl
hw2/OS/include/linux/: init_task.h  sched.h  syscalls.h
hw2/OS/kernel/: hw2.c
hw4/: malloc_2.cpp  malloc_3.cpp  malloc_3.cpp.d
hw4/Ahmad/: malloc_2.cpp
hw4/Dry/: strace_test.c
hw4/Part 1/: malloc_1.cpp
hw4/Part 2/: malloc_2.cpp  malloc_2.h  tests.cpp
hw4/Part 3/: malloc_3.cpp  test.cpp
hw4/Part 4/: malloc_4.cpp
